force-app/main/default/objects/Contact/fields/Seller_Rating__c.field-meta.xml
<CustomField>
    <fullName>Seller_Rating__c</fullName>
    <label>Seller Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>